--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
 <% @lists.each do |list| %>
   <li><%= link_to list.name, list_path(list) %></li>
   <%= link_to "🗑️",
-  list_path(list),
+  lists_path(list),
   data: {turbo_method: :delete, turbo_confirm: "Delete #{@list.name}?"}
 %>
 <% end %>
