--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for(list) do |f| %>
   <%= f.input :name, placeholder: "e.g Favourite Movies" %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "Add", class: "btn btn-primary" %>
 <% end %>
