--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,6 +3,7 @@
 <ul style="list-style: none;">
 <% @lists.each do |list| %>
   <li><%= link_to list.name, list_path(list) %></li>
+  <li><%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %></li>
   <%= link_to "🗑️",
   list_path(list),
   data: {turbo_method: :delete, turbo_confirm: "Delete #{list.name}?"}
